--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -3,13 +3,37 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  --}}
 
-<div class="p-5">
+{{!-- <div class="p-5 box">
     <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
 
-    <button type="button" class="btn btn-primary">Купити</button>
+    <h2 id="user">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h2>
+
+    <button type="button" class="btn btn-dark">Купити</button>
+
+    <p class="user">Text</p>
 </div>
+
+<footer class="p-5 box">
+    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+
+    <p class="user">Text</p>
+
+    <p class="user">
+        <em>Em text</em>
+    </p>
+</footer> --}}
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в <body>
     Адже наш layout/default.hbs має вже структуру HTML
 --}}
+
+<div class="card p-5 m-5 card-dark">
+<ul>
+    <li class="item">Item-1</li>
+    <li class="item">Item-2</li>
+    <li class="item">Item-3</li>
+    <li class="item">Item-4</li>
+    <li class="item">Item-5</li>
+</ul>
+</div>
