--- a/src/layout/selector.hbs
+++ b/src/layout/selector.hbs
@@ -15,11 +15,7 @@
 			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 			<link href='css/normalize.css' rel='stylesheet' />
-			<link href='css/index.css' rel='stylesheet' />
-
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap" rel="stylesheet">
+			<link href='css/selector.css' rel='stylesheet' />
 	</head>
 
 	<body>
