--- a/public/css/template-1.css
+++ b/public/css/template-1.css
@@ -8,7 +8,8 @@
 }
 
 .header{
-  padding: 24px;;
+  padding: 24px;
+  border-bottom: 1px solid #6c757d;
 }
 
 .header_logo{
@@ -55,6 +56,7 @@ margin-bottom: 80px;
 
 .footer{
   padding: 24px 0;
+  border-top: 1px solid #6c757d;
 }
 
 .footer_copyright{
@@ -145,4 +147,61 @@ margin-bottom: 80px;
   width: 100%;
   font-size:19px;
   padding: 9px;
+}
+
+.card{
+  border: 1px solid black;
+} 
+
+/* .page{
+   background-image: url(https://yourbasic.org/golang/square-gopher.png);
+  background-attachment: fixed;  
+   background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;  
+} */
+
+.hero_text{
+  /* background-image: url(https://yourbasic.org/golang/square-gopher.png);
+  background-color: transparent;
+  background-attachment: fixed;  
+  border: 20px solid #000; */
+  padding: 40px;
+  border-image-source: url(https://yourbasic.org/golang/square-gopher.png);
+  border-image-width: 50%;
+  border-image-slice: 1000;
+}
+
+.card_block{
+  list-style-type: circle;
+}
+
+.card_description_item{
+  display: list-item;
+}
+
+/* .table tr{
+  border: 1px solid black;
+} */
+
+.table tr td{
+  border: 1px solid black;
+  border-bottom: 1px solid red;
+  border-right: 1px solid #d9ff05;
+}
+
+.table{
+  table-layout: auto;
+  width: 200px;
+
+  border-collapse: separate;
+  border-spacing: 10px;
+}
+
+.nav_link::before, .nav_link::after{
+  content: open-quote;
+}
+
+.nav_link::after{
+  content: close-quote;
 }
