--- a/src/container/template-2.hbs
+++ b/src/container/template-2.hbs
@@ -1,11 +1,11 @@
 <div class="page">
     <div class="page_content">
         <header class="page_block">
-        <div class="header row g-0">
-            <div class="col-3">
+        <div class="header ">
+            <div class="">
                  {{> logo}}
             </div>
-            <nav class="header_nav col-9">
+            <nav class="header_nav ">
               <div class="header_nav_right">
                 {{> nav list=header}}
               </div>
@@ -24,9 +24,9 @@
      </section >
 
      <section  class="page_block">
-       <div class="row g-4">
+       <div class="flex_container">
         {{#each preview}}
-           <div class="col-6">
+           <div class="flex_item">
              {{> cardPreview data=this}}
            </div>
         {{/each}}
@@ -38,18 +38,18 @@
           <div class="row g-0">
             <div class="col-12">
           <div class="list_header">
-       <div class="row g-0">
-           <div class="col-6">
+       
+           <div class="">
              <h2 class="list_title">List of posts</h2>
            </div>
-           <div class="col-6">
+           <div class="">
             <div class="category_list">
              {{#each categories}}
              <button class="category_button">{{text}}</button>
              {{/each}}
              </div>
            </div>
-         </div>
+        
        </div>
       </div>
 
@@ -79,14 +79,14 @@
        </main>  
 
       <footer class="page_block">  
-        <div class="footer row">
-            <div class="col-3">
+        <div class="footer">
+            <div class="">
                {{> logo}}
                <span class="footer_copyright">Copyright 2023-2024</span>
             </div>
 
             {{#each footer}}
-            <div class="col-3">
+            <div class="">
                 <span class="footer_title">{{title}}</span>
                 {{> nav list=links isVertical=true}}
             </div>
@@ -95,7 +95,3 @@
        </footer>
     </div>
      </div>
-
-     {{!-- <div></div> --}}
-
-
