--- a/src/container/template-3.hbs
+++ b/src/container/template-3.hbs
@@ -12,6 +12,7 @@
       
 
       {{#with hero}}
+      <div class="hero_container">
       <div class="hero">
         <div class="hero_content">
           <h1 class="hero_title">{{title}}</h1>
@@ -22,6 +23,7 @@
         <img src="{{photo}}" alt="hero img" class="hero_image">
         <div class="hero_slider_icon hero_slider_right">{{right}}</div>
         </div>
+      </div>
       </div>
       {{/with}}
 
