--- a/src/container/template-5.hbs
+++ b/src/container/template-5.hbs
@@ -46,16 +46,18 @@
             <p class="form_info">{{info}}</p>
           </form>
           {{/with}}
-        </main>
 
-        <div class="advantages">
+
           {{#each advantages}}
-          <div>
+          <div class="advantage">
             <strong>{{title}}</strong>
             <p>{{text}}</p>
           </div>
           {{/each}}
-        </div>
+
+        </main>
+
+
    
 
       <footer class="page_block">  
